# haomark

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  公众号文章.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  Icon.tsx  LiveEditor.tsx  MarkdownView.tsx  Outline.tsx  RecentMenu.tsx  SettingsDialog.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx
src/lib/: blockDecorations.ts  countText.ts  fileIO.ts  liveDecorations.ts  outline.ts  recentFiles.ts  renderer.ts  settings.ts  tabs.ts  tabsStorage.ts  useTheme.ts  windowTitle.ts
src/samples/: welcome.md
src/styles/: app.css  base.css  live.css  markdown.css
